# JiraTrack

./: .gitignore  README.md  pyproject.toml
config/: sdv_ccs2_pi_map.yaml
src/: jira_track.py  main.py  model.py
src/ui_controllers/: tui_controller.py
src/ui_views/: cookie_view.py  issues_view.py  main_view.py  userdata_view.py
